# people

./: .dir-locals.el  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
app/: Makefile  requirements.in  requirements.txt
app/people/: Makefile  pyproject.toml  settings.py
app/people/address/: __init__.py  models.py  serializers.py
app/people/address/migrations/: 0001_initial.py  0002_alter_address_options.py
app/people/organization/: admin.py  models.py
app/people/organization/migrations/: 0001_initial.py
app/people/people/: .env.dist  asgi.py  settings.py  urls.py  wsgi.py
app/people/person/: __init__.py  admin.py  models.py  serializers.py  serializers2.py  tests.py  tests2.py  views.py  views2.py
app/people/person/migrations/: 0001_initial.py  0002_person_birthday_contact_nickname.py  0003_person_addresses_personaddress_created_personphone.py  0004_alter_personaddress_options_and_more.py  0005_alter_person_options_alter_personphone_options_and_more.py  0006_alter_person_options.py
app/people_web/: README.md  angular.json  manage.py  mise.toml  package.json  pyproject.toml
app/people_web/people/: README.md  angular.json  package-lock.json  package.json
app/people_web/people/src/app/: app.component.ts
app/people_web/people_web/: asgi.py  settings.py  urls.py  wsgi.py
app/people_web/src/: index.html
app/people_web/src/app/: app.component.spec.ts  app.component.ts
app/people_web/src/app/interfaces/: address.ts  contact.ts
