[project]
name = "people"
version = "0.1.0"
description = "API interface for my personal contact manager."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-environ>=0.12.0",
    "django>=5.2",
    "djangorestframework>=3.16.0",
]

[dependency-groups]
dev = [
    "python-lsp-server>=1.12.2",
]
